# research-coordinator

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLUGIN.md  README.md  UPGRADE_ROADMAP.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.claude/checkpoints/: checkpoint-definitions.yaml  checkpoint-handler.md  parallel-execution-rules.yaml  review-checkpoints.yaml
.claude/config/: research-coordinator-routing.yaml
.claude/references/: checkpoint-templates.md
.codex/: AGENTS.md  diverga-codex.cjs
.codex/agents/: index.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test-plugins.yml
.omc/: ultrawork-state.json
.opencode/: oh-my-opencode.json
adapters/: AGENTS.md.template  README.md  claude-settings.template.json  oh-my-opencode.template.json
agents/: a2.md  a3.md  a4.md  a6.md  b3.md  b4.md  b5.md  c1.md  c2.md  c4.md  c5.md  c6.md  c7.md  d1.md  d2.md  d3.md  e1.md  e4.md  e5.md  f1.md  f2.md  f3.md  f4.md  f5.md  g2.md  g3.md  g4.md  g5.md  g6.md  h1.md  h2.md  i1.md  i3.md
config/: agents.json  agents.schema.json  diverga-config.json
docs/: AGENT-ORCHESTRATION-GUIDE-ko.md  AGENT-ORCHESTRATION-GUIDE.md  AGENT-REFERENCE.md  B5-PARALLEL-PROCESSING.md  CHANGELOG-v6.6.1-cross-platform.md  CHANGELOG.md  CODEX-SKILL-SYSTEM.md  CROSS-PLATFORM-GUIDE.md  CROSS_PLATFORM_ENHANCEMENT_PLAN.md  DIAGNOSTIC-REPORT-2026-02-12.md  PLATFORM-LIMITATIONS.md  PROMOTIONAL.md  QUICKSTART.md  RELEASE-NOTES-v8.4.0.md  SDD.md  TROUBLESHOOTING-PLUGIN.md  UPGRADE-ROADMAP-v8.1-v9.md  UPGRADE-ROADMAP.md  USAGE-GUIDELINES.md  v6.1.0-humanization-pipeline.md  v6.5.2-structure-fix.md  v6.7.0-category-i-agents.md
docs/plans/: 2025-01-23-creativity-enhancement-design.md  2025-01-24-conceptual-framework-visualizer-design.md  META_ANALYSIS_CODEBOOK_PLAN.md  META_ANALYSIS_CODEBOOK_PLAN_V2.md
docs/releases/: RELEASE_v6.7.1.md  RELEASE_v6.9.1.md  v6.0-RELEASE-NOTES.md  v6.6.2-RELEASE-NOTES.md  v7.0-RELEASE-NOTES.md  v8.0.1-patch4-RELEASE-NOTES.md  v8.0.2-RELEASE-NOTES.md  v8.2.0.md
docs/reports/: 2025-01-23-creativity-enhancement-analysis.md  V3-UPGRADE-REPORT.md
lib/: index.ts
lib/agents/: discovery.ts
lib/hud/: state.ts
lib/memory/: IMPLEMENTATION_SUMMARY.md  LAYER1_COMPLETE.md  MEMORY_API_SUMMARY.md  QUICK_REFERENCE.md  README.md  VERIFY_INSTALLATION.py  __init__.py  requirements.txt
mcp/: agent-prerequisite-map.json  checkpoint-server.js  diverga-server.js  package.json
mcp/.omc/: project-memory.json
mcp/lib/: checkpoint-logic.js  constants.js  messaging.js  sqlite-servers.js  sqlite-state.js  (+1 more)
qa/: IMPLEMENTATION_SUMMARY.md  README.md  RELEASE-v3.0.md  __init__.py  requirements.txt  run_all_scenarios.sh  run_tests.py
scripts/: doctor.js  generate.js  install-all-plugins.sh  install-codex.sh  install-multi-cli.sh  install-opencode.sh  install.ps1  install.sh  rc  rc.py  release.js  sync-version.js  validate_agents.py
src/: index.ts
templates/: README.md
tests/: __init__.py  test_agent_consistency.py  test_checkpoint_system.py  test_memory_system.py  test_patch4_changes.py  test_setup_wizard.py  test_skill_structure.py  test_validate_agents.py  test_version_consistency.py
(+392 files in other folders)
